# feature-inspect

./: .gitignore  CITATION.cff  README.md  pyproject.toml  tox.ini
examples/: example_data.py  small_example_linear_probe.py  small_example_umap_inspect.py  use_case_linear_probe.py  use_case_umap_inspect.py
fi_misc/: benchmark.py  global_util.py
lp_inspect/: __init__.py  data.py  explore.py  model.py
misc/: benchmark.py  data.py
monai_handlers/: LinearProbeHandler.py  UmapHandler.py
umap_inspect/: README.md  __init__.py  constants.py  explore.py  image_utils.py  logging.conf  umap_metrics.py  umap_utils.py
